Use specific npm package versions to improve build stability and repeatability. Add more types.
